src/pj/poco/test/neg/NSTRUC04.POC
/* See if detect wrong level of indirection on a -> */
#pragma poco echo "expect>using -> on something that isn't a struct"

typedef struct foobar {int foo; char bar;} Foobar;

main()
{
Foobar fb;
Foobar *f = &fb;
Foobar **pf = &f;

pf->bar = 'c';
puts("I shouldn't compile");
}
